No longer using deprecated "-1" option to tail; my local bundle got changed for that last one (*grumble*).
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1327 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Restart TextMate.plist
+++ b/Commands/Restart TextMate.plist
@@ -8,7 +8,7 @@
 	<string>{
 app_path=$(
     ps -axw -o command -p $PPID | \
-    tail -1 | \
+    tail -n 1 | \
     sed -e 's#^\(/.*\)/Contents.*$#\1#g' \
 )
 
