-- added disabled to list of recognised words -- removed a duplicate foregroundColour -- and something else i think ;)
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1360 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -40,13 +40,13 @@
 		</dict>
 		<dict>
 			<key>match</key>
-			<string>\b(fileTypes|keyEquivalent|foldingStartMarker|foldingStopMarker|patterns|match|begin|end|swallow|include|uuid|scopeName|captures|beginCaptures|endCaptures|firstLineMatch|comment|repository)\b</string>
+			<string>\b(fileTypes|keyEquivalent|foldingStartMarker|foldingStopMarker|patterns|match|begin|end|swallow|include|uuid|scopeName|captures|beginCaptures|endCaptures|firstLineMatch|comment|repository|disabled)\b</string>
 			<key>name</key>
 			<string>support.constant.tm-language-def</string>
 		</dict>
 		<dict>
 			<key>match</key>
-			<string>\b(foregroundColor|backgroundColor|foregroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|mode|highlightPairs|smartTypingPairs|increaseIndentPattern)\b</string>
+			<string>\b(foregroundColor|backgroundColor|fontStyle|elementForegroundColor|elementBackgroundColor|elementFontStyle|mode|highlightPairs|smartTypingPairs|increaseIndentPattern)\b</string>
 			<key>name</key>
 			<string>invalid.deprecated.constant.tm-language-def</string>
 		</dict>
