• XML variant of the UUID
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1388 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -10,6 +10,7 @@
 		<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
 		<string>970BA294-B667-11D9-8D53-00039369B986</string>
 		<string>012EEE69-8E4B-11D9-9E67-000D93589AF6</string>
+		<string>73159012-CC7A-4B29-B570-384AFE3D77F6</string>
 		<string>867E9276-B230-11D9-AD23-000D93589AF6</string>
 		<string>B28EA1EE-B356-11D9-A115-000D93589AF6</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
