Change shortcuts for Restart TextMate and Run Focused Unit Test
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1534 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Restart TextMate.plist
+++ b/Commands/Restart TextMate.plist
@@ -29,7 +29,7 @@ fi
 	<key>input</key>
 	<string>none</string>
 	<key>keyEquivalent</key>
-	<string>@R</string>
+	<string>^@q</string>
 	<key>name</key>
 	<string>Restart TextMate</string>
 	<key>output</key>
