• moved key bindings to ctrl-shift P
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1543 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Show scope.plist
+++ b/Commands/Show scope.plist
@@ -9,9 +9,9 @@
 	<key>input</key>
 	<string>none</string>
 	<key>keyEquivalent</key>
-	<string>^T</string>
+	<string>^P</string>
 	<key>name</key>
-	<string>Show scope</string>
+	<string>Show Scope</string>
 	<key>output</key>
 	<string>showAsTooltip</string>
 	<key>uuid</key>
