--- a/Commands/Show Keyboard Shortcuts.plist
+++ b/Commands/Show Keyboard Shortcuts.plist
@@ -5,7 +5,7 @@
 	<key>beforeRunningCommand</key>
 	<string>nop</string>
 	<key>command</key>
-	<string>"${TM_RUBY:=ruby}" -- "${TM_BUNDLE_PATH}/Tools/list_shortcuts.rb"</string>
+	<string>"${TM_RUBY:=ruby}" -- "${TM_BUNDLE_SUPPORT}/bin/list_shortcuts.rb"</string>
 	<key>dontFollowNewOutput</key>
 	<true />
 	<key>input</key>
