Changed the last commit to use the XML plist syntax after fixing it's scope.
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1755 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -6,7 +6,7 @@
         {   begin = "(?=<?xml)";
             end = "this_is_something_you_will_never_match"; 
             patterns = (
-                { include = "text.xml"; },
+                { include = "text.xml.plist"; },
             );
         }, 
         {
