One final change to give it a proper scope name.
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1756 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -5,6 +5,7 @@
     patterns = (
         {   begin = "(?=<?xml)";
             end = "this_is_something_you_will_never_match"; 
+            name = "text.xml.plist";
             patterns = (
                 { include = "text.xml.plist"; },
             );
