• added name = "text.xml.plist"; to Michaels clever hack
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1758 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -3,7 +3,8 @@
     foldingStopMarker = "(\\*/|\\}|\\))"; 
     name = "Language Definition (TextMate)"; 
     patterns = (
-        {   begin = "(?=<?xml)";
+        {   name = "text.xml.plist";
+            begin = "(?=<?xml)";
             end = "this_is_something_you_will_never_match"; 
             name = "text.xml.plist";
             patterns = (
