• removed double name :) • added begin-of-line anchor to <!xml match
git-svn-id: http://svn.textmate.org/trunk/Bundles/LanguageDefinition.tmbundle@1759 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -4,9 +4,8 @@
     name = "Language Definition (TextMate)"; 
     patterns = (
         {   name = "text.xml.plist";
-            begin = "(?=<?xml)";
+            begin = "^(?=<?xml)";
             end = "this_is_something_you_will_never_match"; 
-            name = "text.xml.plist";
             patterns = (
                 { include = "text.xml.plist"; },
             );
