• rename bundle on disk
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@1831 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Restart TextMate.plist
+++ b/Commands/Restart TextMate.plist
@@ -31,7 +31,7 @@ fi
 	<key>keyEquivalent</key>
 	<string>^@q</string>
 	<key>name</key>
-	<string>Restart TextMate</string>
+	<string>Restart</string>
 	<key>output</key>
 	<string>discard</string>
 	<key>uuid</key>
