--- a/Syntaxes/LanguageDefinition.plist
+++ b/Syntaxes/LanguageDefinition.plist
@@ -12,7 +12,7 @@
 	<array>
 		<dict>
 			<key>begin</key>
-			<string>^(?=&lt;?xml)</string>
+			<string>^(?=&lt;\?xml)</string>
 			<key>end</key>
 			<string>this_is_something_you_will_never_match</string>
 			<key>name</key>
