• select stuff in TextMate, press ctrl-option-shift V, and it gets posted on http://paste.textmate.org with a link sent to the ##textmate channel
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@1844 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -9,6 +9,7 @@
 		<string>E5142394-B07A-11D9-8EC4-000D93589AF6</string>
 		<string>970BA294-B667-11D9-8D53-00039369B986</string>
 		<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
+		<string>20B6054F-965B-4C9B-91DA-E6868A721954</string>
 		<string>012EEE69-8E4B-11D9-9E67-000D93589AF6</string>
 		<string>73159012-CC7A-4B29-B570-384AFE3D77F6</string>
 		<string>867E9276-B230-11D9-AD23-000D93589AF6</string>
