--- a/Commands/Paste Selection in #textmate.plist
+++ b/Commands/Paste Selection in #textmate.plist
@@ -6,7 +6,7 @@
 	<string>nop</string>
 	<key>command</key>
 	<string>url=$(curl 2&gt;/dev/null http://paste.textmate.org/submit -F user="$USER" -F text="$TM_SELECTED_TEXT")
-osascript -e 'tell application "Colloquy" to send message "I just pasted: '"$url"'" to chat room "##textmate" of connection 1'</string>
+osascript -e 'tell application "Colloquy" to send message "I just pasted: '"$url"'" to (get chat room "##textmate" of (first connection where server address is equal to "irc.freenode.net"))'</string>
 	<key>input</key>
 	<string>none</string>
 	<key>keyEquivalent</key>
