--- a/info.plist
+++ b/info.plist
@@ -9,12 +9,14 @@
 		<string>E5142394-B07A-11D9-8EC4-000D93589AF6</string>
 		<string>970BA294-B667-11D9-8D53-00039369B986</string>
 		<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
+		<string>DA0A4E77-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>20B6054F-965B-4C9B-91DA-E6868A721954</string>
 		<string>012EEE69-8E4B-11D9-9E67-000D93589AF6</string>
 		<string>73159012-CC7A-4B29-B570-384AFE3D77F6</string>
 		<string>867E9276-B230-11D9-AD23-000D93589AF6</string>
 		<string>B28EA1EE-B356-11D9-A115-000D93589AF6</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
+		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
 	</array>
 	<key>uuid</key>
 	<string>5A9D4FC6-6CBE-11D9-A21B-000D93589AF6</string>
