Paste Selection checks whether Colloquy is running and connected to irc.freenode.org; if not, copies the URL to the clipboard.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@2116 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Paste Selection in #textmate.plist
+++ b/Commands/Paste Selection in #textmate.plist
@@ -11,8 +11,15 @@ url=$(expand -t $TM_TAB_SIZE|curl 2&gt;/dev/null http://paste.textmate.org/submi
 
 [[ -z "$url" ]] &amp;&amp; echo "Got no URL back from pasting service." &amp;&amp; exit
 
-osascript -e 'tell application "Colloquy" to send message "pasted '"$url"'" action tense yes to (get chat room "##textmate" of (first connection where server address is equal to "irc.freenode.net"))'
-</string>
+if [ `osascript -e 'tell application "System Events" to exists (application processes whose name is "Colloquy")'` = "true" ]; then
+  osascript -e 'tell application "Colloquy" to send message "pasted '"$url"'" action tense yes to (get chat room "##textmate" of (first connection where server address is equal to "irc.freenode.net"))'
+  echo "The selection was pasted to #textmate."
+  exit
+else
+  echo "$url" | pbcopy
+  echo "The selection is available as $url"
+  echo "For your convenience, the URL was placed on the clipboard."
+fi</string>
 	<key>input</key>
 	<string>selection</string>
 	<key>keyEquivalent</key>
