Small fix. These improvements to "Paste Selection" were submitted by Jay Soffian.
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@2117 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Paste Selection in #textmate.plist
+++ b/Commands/Paste Selection in #textmate.plist
@@ -16,7 +16,7 @@ if [ `osascript -e 'tell application "System Events" to exists (application proc
   echo "The selection was pasted to #textmate."
   exit
 else
-  echo "$url" | pbcopy
+  echo -n "$url" | pbcopy
   echo "The selection is available as $url"
   echo "For your convenience, the URL was placed on the clipboard."
 fi</string>
