• make more commands use fallback for selection and the new menu title feature
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@2273 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Paste Selection in #textmate.plist
+++ b/Commands/Paste Selection in #textmate.plist
@@ -19,12 +19,14 @@ else
   echo "The selection is available as $url"
   echo "For your convenience, the URL was placed on the clipboard."
 fi</string>
+	<key>fallbackInput</key>
+	<string>line</string>
 	<key>input</key>
 	<string>selection</string>
 	<key>keyEquivalent</key>
 	<string>^~V</string>
 	<key>name</key>
-	<string>Paste Selection in #textmate</string>
+	<string>Paste Line / Selection in #textmate</string>
 	<key>output</key>
 	<string>showAsTooltip</string>
 	<key>uuid</key>
