• updated to show a progress indicator while contacting paste.textmate.org
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@2360 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Paste Selection in #textmate.plist
+++ b/Commands/Paste Selection in #textmate.plist
@@ -7,7 +7,11 @@
 	<key>command</key>
 	<string>[[ -z "$TM_SELECTED_TEXT" ]] &amp;&amp; exit_show_tool_tip "Nothing is selected."
 
-url=$(expand -t $TM_TAB_SIZE|curl 2&gt;/dev/null http://paste.textmate.org/submit -F user="$USER" -F text='&lt;-')
+url=$(expand -t $TM_TAB_SIZE|curl -s http://paste.textmate.org/submit -F user="$USER" -F text='&lt;-' \
+	2&gt; &gt;(CocoaDialog progressbar --indeterminate \
+		--title "Paste in #textmate…" \
+		--text "Contacting Server “paste.textmate.org”…" \
+	))
 
 [[ -z "$url" ]] &amp;&amp; exit_show_tool_tip "Got no URL back from pasting service."
 
