--- a/info.plist
+++ b/info.plist
@@ -11,6 +11,7 @@
 		<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
 		<string>DA0A4E77-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>20B6054F-965B-4C9B-91DA-E6868A721954</string>
+		<string>5C4108F1-7979-413C-A6DF-3271708C7B60</string>
 		<string>5F225755-5840-44CF-BC26-2D484DE833A0</string>
 		<string>ADFED53B-16EC-4956-A6A7-3EA2B8140F86</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
