--- a/info.plist
+++ b/info.plist
@@ -14,6 +14,7 @@
 		<string>5C4108F1-7979-413C-A6DF-3271708C7B60</string>
 		<string>5F225755-5840-44CF-BC26-2D484DE833A0</string>
 		<string>ADFED53B-16EC-4956-A6A7-3EA2B8140F86</string>
+		<string>61F92184-1A50-4310-9F75-C9CD2C8819FA</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
 		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
 	</array>
