--- a/info.plist
+++ b/info.plist
@@ -7,6 +7,7 @@
 	<key>ordering</key>
 	<array>
 		<string>E5142394-B07A-11D9-8EC4-000D93589AF6</string>
+		<string>B9F3C8E5-C125-48E6-9931-557D16C0B92D</string>
 		<string>970BA294-B667-11D9-8D53-00039369B986</string>
 		<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
 		<string>DA0A4E77-5F16-11D9-B9C3-000D93589AF6</string>
@@ -15,6 +16,7 @@
 		<string>5F225755-5840-44CF-BC26-2D484DE833A0</string>
 		<string>ADFED53B-16EC-4956-A6A7-3EA2B8140F86</string>
 		<string>61F92184-1A50-4310-9F75-C9CD2C8819FA</string>
+		<string>16B36407-9F9D-47E0-93B8-80BA881066B5</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
 		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
 	</array>
