• added menu structure and renamed a few items to better fit with this new presentation
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3378 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Insert Scratch Snippet.plist
+++ b/Commands/Insert Scratch Snippet.plist
@@ -11,7 +11,7 @@
 	<key>keyEquivalent</key>
 	<string>~S</string>
 	<key>name</key>
-	<string>Insert Scratch Snippet</string>
+	<string>Insert</string>
 	<key>output</key>
 	<string>insertAsSnippet</string>
 	<key>uuid</key>
