--- a/Commands/Record Scratch Snippet.plist
+++ b/Commands/Record Scratch Snippet.plist
@@ -11,7 +11,7 @@
 	<key>keyEquivalent</key>
 	<string>^~s</string>
 	<key>name</key>
-	<string>Record Scratch Snippet</string>
+	<string>Record</string>
 	<key>output</key>
 	<string>discard</string>
 	<key>uuid</key>
