--- a/info.plist
+++ b/info.plist
@@ -2,6 +2,41 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>mainMenu</key>
+	<dict>
+		<key>excludedItems</key>
+		<array>
+			<string>16B36407-9F9D-47E0-93B8-80BA881066B5</string>
+		</array>
+		<key>items</key>
+		<array>
+			<string>61F92184-1A50-4310-9F75-C9CD2C8819FA</string>
+			<string>------------------------------------</string>
+			<string>970BA294-B667-11D9-8D53-00039369B986</string>
+			<string>48976460-B5A4-11D9-87C9-000D93589AF6</string>
+			<string>DA0A4E77-5F16-11D9-B9C3-000D93589AF6</string>
+			<string>------------------------------------</string>
+			<string>20B6054F-965B-4C9B-91DA-E6868A721954</string>
+			<string>5C4108F1-7979-413C-A6DF-3271708C7B60</string>
+			<string>------------------------------------</string>
+			<string>BBB8AE46-0694-4453-B6C5-9B9633B891B2</string>
+			<string>------------------------------------</string>
+			<string>E5142394-B07A-11D9-8EC4-000D93589AF6</string>
+		</array>
+		<key>submenus</key>
+		<dict>
+			<key>BBB8AE46-0694-4453-B6C5-9B9633B891B2</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>5F225755-5840-44CF-BC26-2D484DE833A0</string>
+					<string>ADFED53B-16EC-4956-A6A7-3EA2B8140F86</string>
+				</array>
+				<key>name</key>
+				<string>Scratch Snippet</string>
+			</dict>
+		</dict>
+	</dict>
 	<key>name</key>
 	<string>TextMate</string>
 	<key>ordering</key>
