--- a/Commands/Restart TextMate.plist
+++ b/Commands/Restart TextMate.plist
@@ -22,7 +22,7 @@
 	<key>keyEquivalent</key>
 	<string>^@q</string>
 	<key>name</key>
-	<string>Restart</string>
+	<string>Relaunch TextMate</string>
 	<key>output</key>
 	<string>discard</string>
 	<key>uuid</key>
