• rename to say “Current Theme” instead of just “Theme”
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3405 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Create CSS from Theme.plist
+++ b/Commands/Create CSS from Theme.plist
@@ -15,7 +15,7 @@ print generate_stylesheet_from_theme()</string>
 	<key>keyEquivalent</key>
 	<string></string>
 	<key>name</key>
-	<string>Create CSS From Theme</string>
+	<string>Create CSS From Current Theme</string>
 	<key>output</key>
 	<string>openAsNewDocument</string>
 	<key>uuid</key>
