• change use of meta.diff.separator to meta.separator • make an explicit preference for the style of separators in the TextMate bundle (themes can still override this) and change the diff style (previously targeting meta.diff) to target only meta.diff.index
git-svn-id: http://svn.textmate.org/trunk/Bundles/TextMate.tmbundle@3516 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -60,6 +60,7 @@
 		<string>16B36407-9F9D-47E0-93B8-80BA881066B5</string>
 		<string>101D6FC2-6CBD-11D9-B329-000D93347A42</string>
 		<string>8C0D0F05-6E49-11D9-A933-000D93589AF6</string>
+		<string>DA3A550A-F4AF-4CFD-935F-8687FA17DC4B</string>
 	</array>
 	<key>uuid</key>
 	<string>5A9D4FC6-6CBE-11D9-A21B-000D93589AF6</string>
